--- a/Final_Model/Code/Classification_data_preprocessing.ipynb
+++ b/Final_Model/Code/Classification_data_preprocessing.ipynb
@@ -7,17 +7,7 @@
     "id": "VL4C0OYXXfmT"
    },
    "source": [
-    "# Classification_data_preprocessing (In Progress)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "PSmt6BmjXfmV"
-   },
-   "source": [
-    "**Note: the code is still in progress and is subjected to change**"
+    "# Classification_data_preprocessing "
    ]
   },
   {
@@ -55,6 +45,7 @@
      "height": 222
     },
     "colab_type": "code",
+    "collapsed": true,
     "executionInfo": {
      "elapsed": 72150,
      "status": "ok",
@@ -112,6 +103,7 @@
      "height": 121
     },
     "colab_type": "code",
+    "collapsed": true,
     "executionInfo": {
      "elapsed": 28921,
      "status": "ok",
@@ -8818,7 +8810,7 @@
     "# printing the confusion matrix\n",
     "plt.rcParams['figure.figsize'] = (9, 9)\n",
     "sns.heatmap(cm, annot = True, cmap = 'Reds')\n",
-    "plt.title('Confusion Matrix', fontweight = 20, fontsize = 30)\n",
+    "plt.title('Confusion Matrix of Neural network for Dataset_1', fontweight = 20, fontsize = 30)\n",
     "# fix for mpl bug that cuts off top/bottom of seaborn viz\n",
     "b, t = plt.ylim() # discover the values for bottom and top\n",
     "b += 0.5 # Add 0.5 to the bottom\n",
@@ -9658,7 +9650,7 @@
     "id": "Zx3or_F2AfRd"
    },
    "source": [
-    "### CART"
+    "### Decision Tree Algorithm (CART)"
    ]
   },
   {
